# DiceServ

./: CMakeLists.txt  LICENSE  README.md  diceserv.cpp  diceserv.example.conf  diceserv.h  ds_calc.cpp  ds_daggerheart.cpp  ds_dnd3echar.cpp  ds_earthdawn.cpp  ds_list.cpp  ds_roll.cpp  ds_set.cpp  ds_status.cpp
